Prevent text from getting cut off

--- a/src/main/content/_assets/css/server-command.css
+++ b/src/main/content/_assets/css/server-command.css
@@ -64,6 +64,7 @@
 
 #content {
     padding: 20px 20px 50px 20px;
+    margin-right: -20px;
 }
 
 #command_title {
@@ -98,10 +99,6 @@ div.sectionbody > div.paragraph > p, div.sectionbody > div.dlist > dl > dd > p {
     padding-top: 11px;
 }
 
-.content {
-    margin-right: -20px;
-}
-
 pre, pre > code, code {
     background-color: #f1f4fe;
     font-family: Courier;
@@ -112,7 +109,7 @@ pre, pre > code, code {
     border: none;
 }
 
-.content > pre {
+#content > pre {
     padding-left: 25px;
 }
 
